<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">优造中国</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="finish">完成</string>
    <string name="input_name">请输入姓名</string>
    <string name="phone_number">手机号码</string>
    <string name="phone_number_1">手机号码 :  </string>
    <string name="phone_password_1">密码 :  </string>
    <string name="input_phone_number">请输入手机号码</string>
    <string name="place">所在地区</string>
    <string name="immediately_login">立即登录</string>
    <string name="wait_pay">待付款</string>
    <string name="wait_check">待审核</string>
    <string name="wait_commend">待评价</string>
    <string name="wait_send">待发货</string>
    <string name="wait_receive">待收货</string>
    <string name="setting">设置</string>
    <string name="verification_code">验证码</string>
    <string name="verification_code_1">验证码 :  </string>
    <string name="terms_service_one">点击立即登录,即表示阅读并同意</string>
    <string name="terms_service">优造中国服务条款</string>
    <string name="get_sms_code">获取验证码</string>
    <string name="head">头像</string>
    <string name="nick_name">昵称</string>
    <string name="real_name">真实姓名</string>
    <string name="birthday">出生日期</string>
    <string name="sex">性别</string>
    <string name="please_write">请填写</string>
    <string name="please_choose">请选择</string>
    <string name="search_text">搜索商品或设计师</string>
    <string name="search_template_text">搜索载体</string>
    <string name="choose_type">规格选择</string>
    <string name="design_idea">设计理念及说明展示</string>
    <string name="base_commodity_information">商品基本信息</string>
    <string name="detail_commodity_information">商品详情信息</string>
    <string name="immediately_buy">立即购买</string>
    <string name="add_shopping_cart">加入购物车</string>
    <string name="sure">确定</string>
    <string name="save">保存</string>
    <string name="please_set_nick_name">请填写昵称</string>
    <string name="please_set_profession">请填写职业</string>
    <string name="please_set_real_name">请填写真实姓名</string>
    <string name="available_price">可提现金额:¥%s</string>
    <string name="exit_login">退出登录</string>
    <string name="colon">:</string>
    <string name="color">颜色</string>
    <string name="size">规格</string>
    <string name="number">数量</string>
    <string name="please_choose_type">请选择规格</string>
    <string name="design_idear">设计理念</string>
    <string name="product_show">商品展示</string>
    <string name="about_us">关于我们</string>
    <string name="clean_cache">清除缓存</string>
    <string name="add_attention">+关注</string>
    <string name="already_attention">已关注</string>
    <string name="uzao_china">优造中国</string>
    <string name="service_tel">客服电话:400-xxx-xxx</string>
    <string name="shopping_cart_1">购物车还空空如也哦~</string>
    <string name="shopping_cart_2">登录后将同步购物车中的商品~</string>
    <string name="check_all">全选</string>
    <string name="goods_number">X%s</string>
    <string name="check_the_logistics">查看物流</string>
    <string name="transport_company">物流公司 : %s</string>
    <string name="transport_state">运输状态 : %s</string>
    <string name="transport_num">运单号 : %s</string>
    <string name="transport_tel">官方电话 : %s</string>
    <string name="apply">提交</string>
    <string name="add_image">添加图片</string>
    <string name="zero">0</string>
    <string name="zero1">0.00</string>
    <string name="sixty_second">60S</string>
    <string name="profession">职业</string>
    <string name="email">邮箱</string>
    <string name="total_price">总额 : ¥%s</string>
    <string name="money_price">¥%s</string>
    <string name="cut_price">已减 : ¥%s</string>
    <string name="move_collect">移到收藏夹</string>
    <string name="activity_cut">活动优惠</string>
    <string name="activity_cut1">活动立减</string>
    <string name="coupons">优惠券</string>
    <string name="goods_price">商品金额</string>
    <string name="buy_them">合并付款</string>
    <string name="favorite_count">粉丝数 : %s</string>
    <string name="goods_count">商品数 : %s</string>
    <string name="personal_center">个人中心</string>
    <string name="please_write_comment">请填写评价</string>
    <string name="comment_hint">详情描述,将这次购物的体验分享给其他人吧</string>
    <string name="comment_num">用户评价(%s)</string>
    <string name="batch_address">分批收货地址</string>
    <string name="belong_category">所属分类  :  %s</string>
    <string name="reason">原因  :  %s</string>
    <string name="publish_time">发布时间    %s</string>
    <string name="unattended_activity">未参加活动</string>
    <string name="history_search">历史搜索</string>
    <string name="filter">筛选</string>
    <string name="comprehensive_ranking">综合排序</string>
    <string name="inspiration_gallery">灵感画廊</string>
    <string name="custom_made">定制</string>
    <string name="design">设计</string>
    <string name="how_design">如何定制</string>
    <string name="create_theme">创作主题</string>
    <string name="become_designer">成为设计师</string>
    <string name="modify_password">修改密码</string>
    <string name="feedback">意见反馈</string>
    <string name="login_way">其它登录方式</string>
    <string name="feedback_content">反馈内容</string>
    <string name="share_app">分享app</string>
    <string name="current_version">当前版本号</string>
    <string name="message_push">消息推送</string>
    <string name="please_enter_password">请输入密码</string>
    <string name="please_enter_password_again">请再次输入密码</string>
    <string name="region">地区</string>
    <string name="version_number">V%s</string>
    <string name="cancel_order">取消订单</string>
    <string name="order_pay">付款</string>
    <string name="order_num">订单编号    %s</string>
    <string name="order_num_sample">打样订单编号    %s</string>
    <string name="order_num_product">批量生产订单编号    %s</string>
    <string name="order_num1">订单编号: %s</string>
    <string name="order_child_num">订单编号:  %s</string>
    <string name="create_time">下单时间:  %s</string>
    <string name="order_detail_pay_way">支付方式:  %s</string>
    <string name="create_time1">创建时间</string>
    <string name="pay_time">付款时间:  %s</string>
    <string name="product_total_price">商品合计:  %s</string>
    <string name="order_detail_cut_price">优惠活动:  -¥%s</string>
    <string name="order_detail_discount_price">优惠券:  -¥%s</string>
    <string name="cancel_time">关闭时间</string>
    <string name="finish_time">完成时间</string>
    <string name="count_time">还有%s关闭订单</string>
    <string name="count_time_confirm_goods">自动收货时间还剩 : %s</string>
    <string name="receive_goods_time">收货时间 : %s</string>
    <string name="look_order">查看订单</string>
    <string name="return_main">继续逛逛</string>
    <string name="pay_goods_num">共 %s 件商品</string>
    <string name="pay_goods_money">金额 ¥%s</string>
    <string name="repay">重新支付</string>
    <string name="product_order">生产订单</string>
    <string name="my_made">我的智造</string>
    <string name="product_info">生产信息</string>
    <string name="order_info">订单信息</string>
    <string name="include_freight">(含运费¥%s)</string>
    <string name="produce_pay_way">支付方式</string>
    <string name="produce_pay_no">交易号</string>
    <string name="produce_pay_time">支付时间</string>
    <string name="order_package">包裹 %s</string>
    <string name="many_account">共%s件</string>
    <string name="after_sales_order_number">售后单编号:  %s</string>
    <string name="after_sales_order_number1">售后单号    %s</string>
    <string name="after_sales_order_type">售后方式    %s</string>
    <string name="after_sales_order_status">售后状态    %s</string>
    <string name="after_sales_apply_time">申请售后时间:  %s</string>
    <string name="after_sales_apply_time1">申请时间    %s</string>
    <string name="after_sales_apply_choose">我要选择</string>
    <string name="after_sales_apply_reason">申请售后原因</string>
    <string name="after_sales_apply_write_des1">售后申请描述</string>
    <string name="after_sales_apply_has_upload_image">上传照片</string>
    <string name="after_sale_detail">售后单详情</string>
    <string name="return_money">退款</string>
    <string name="return_money1">退款金额</string>
    <string name="replace_goods">换货</string>
    <string name="please_write_reason">请填写原因</string>
    <string name="remark">备注  %s</string>
    <string name="apply_after_sales">申请售后</string>
    <string name="after_sales_reject">售后失败原因</string>
    <string name="total_account">合计</string>
    <string name="close_account">结算</string>
    <string name="account">¥%s</string>
    <string name="cut_account">-¥%s</string>
    <string name="pay_way">支付方式选择</string>
    <string name="refund_amount">退款金额 %s</string>
    <string name="after_number">售后编号 %s</string>
    <string name="pay_way_wx">微信</string>
    <string name="pay_way_zfb">支付宝</string>
    <string name="bill">发票</string>
    <string name="bill_type">发票类型</string>
    <string name="bill_title">发票抬头</string>
    <string name="bill_place">请输入个人或公司名</string>
    <string name="bill_content">发票内容</string>
    <string name="bill_type1">日用品</string>
    <string name="bill_type2">家具用品</string>
    <string name="bill_type3">服饰</string>
    <string name="bill_type4">化妆品</string>
    <string name="no_bill">不开具发票</string>
    <string name="bill_public">纸质普通发票</string>
    <string name="go_pay">去支付</string>
    <string name="need_pay_num">需支付:¥%s</string>
    <string name="order_money">订单金额  ¥%s</string>
    <string name="real_pay">实付金额</string>
    <string name="main_page">首页</string>
    <string name="category">分类</string>
    <string name="shopping_cart">购物车</string>
    <string name="my">我的</string>
    <string name="loading">请稍后…</string>
    <string name="no_net">网络不可用,请检查你的网络</string>
    <string name="net_error">网络访问错误，请稍后再试</string>
    <string name="add_address">新增收货地址</string>
    <string name="add_address1">添加收货地址</string>
    <string name="title_address">收货地址</string>
    <string name="receive_address">收货地址 : %s</string>
    <string name="edit_address">编辑地址</string>
    <string name="receive_people">收货人 : %s</string>
    <string name="receive_people1">收货人 : </string>
    <string name="detail_address">详细地址</string>
    <string name="set_default_address">设为默认</string>
    <string name="add_address_success">添加成功</string>
    <string name="add_address_failed">上传失败</string>
    <string name="manage_address">收货地址</string>
    <string name="manage">管理</string>
    <string name="default_address">默认地址</string>
    <string name="set_default">设为默认</string>
    <string name="del">删除</string>
    <string name="cancel">取消</string>
    <string name="updata_address_error">地址编辑失败</string>
    <string name="updata_address_success">地址编辑成功</string>
    <string name="sure_to_del_address">确认要删除该地址吗？</string>
    <string name="selected_address">选择地区</string>
    <string name="collection_goods">收藏的商品</string>
    <string name="attention_designer">我的关注</string>
    <string name="my_goods">我的商品</string>
    <string name="my_works">我的作品</string>
    <string name="my_order">我的订单</string>
    <string name="my_design">我的设计</string>
    <string name="my_material">我的素材</string>
    <string name="my_coupon">我的优惠券</string>
    <string name="my_customer_service">我的售后</string>
    <string name="my_invite">邀请返利</string>
    <string name="contact_customer_service">联系客服</string>
    <string name="sell_order">售出订单</string>
    <string name="choose_classify">选择类别</string>
    <string name="enter_verification_code">请输入验证码</string>
    <string name="login">登录</string>
    <string name="discount_number">%s张可用</string>
    <string name="message_detail">消息详情</string>
    <string name="all_product">全部</string>
    <string name="published_product">已发布</string>
    <string name="un_publish_product">未发布</string>
    <string name="uzao_agreement_add">未注册优造的手机号 登录时将自动注册</string>
    <string name="psd_and_num_login">密码登录</string>
    <string name="wx">微信</string>
    <string name="qq">QQ</string>
    <string name="sina">微博</string>
    <string name="home_page">首页</string>
    <string name="bar_filter">滤镜</string>
    <string name="bar_design_clip">裁剪</string>
    <string name="bar_design_alph">背景透明</string>
    <string name="bar_design_fit">适配</string>
    <string name="bar_design_full">填充</string>
</resources>